# dicepy

./: pyproject.toml  setup.py
dicepy/: __init__.py  roll.py
tests/: __init__.py  test_roll.py  test_roll_math.py  test_single_roll.py
